# ray-tracing-kdtree

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  input_transform.py  raytracer  raytracer.cbp
src/: Box.cpp  Box.h  Color.cpp  Color.h  Image.cpp  Image.h  KDTree.cpp  KDTree.h  ObjParser.cpp  ObjParser.h  Plane.cpp  Plane.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vec.cpp  Vec.h  base.h  defaults.h  main.cpp
